tokio-postgres/tests/derive/fail/rename_all_on_field.rs
use tokio_postgres::FromRow;

#[derive(FromRow)]
struct User {
    #[postgres(rename_all = "camelCase")]
    id: i64,
}

fn main() {}
